--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -167,6 +167,8 @@
 }
 
 :root {
+  --el-text-color-primary: #06b6d4;
+  --el-color-primary: #06b6d4;
   --el-bg-color-overlay: #0a0a23;
   --el-text-color-regular: white;
   --el-border-color-light: #111;
@@ -178,8 +180,8 @@
   --el-border-color: rgba(255, 255, 255, 0.2);
   --el-table-header-bg-color: red;
   --el-text-color-secondary: #ffffff;
-  --el-text-color-primary: #0099ff;
-  --el-bg-color: #111;
+  /* --el-text-color-primary: #0099ff; */
+  --el-bg-color: "";
   --el-fill-color-light: rgba(255, 255, 255, 0.1);
   --el-color-success-light-9: rgba(22, 51, 15, 0.85);  
   --el-color-error-light-9: rgba(60, 0, 0, 0.85);  
